@@ -1,7 +1,7 @@
 Package: tram
 Title: Transformation Models
-Version: 0.2-6
-Date: 2019-06-20
+Version: 0.2-7
+Date: 2019-07-04
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))
 Description: Formula-based user-interfaces to specific transformation models
